--- a/admin/styles/globals.css
+++ b/admin/styles/globals.css
@@ -30,7 +30,7 @@ table.basic tr td{
     @apply px-4 py-1;
 }
 table.basic a{
-    @apply px-4 rounded-sm inline-flex mx-1 items-center gap-1 text-sm py-1;
+    @apply bg-blue-900 text-white px-2 py-1 rounded-md shadow-sm inline-flex gap-1;
 }
 .btn-default, .btn-red{
     @apply px-4 py-1 rounded-md;
