--- a/admin/styles/globals.css
+++ b/admin/styles/globals.css
@@ -30,14 +30,14 @@ table.basic tr td{
     @apply px-4 py-1;
 }
 table.basic a{
-    @apply bg-blue-900 text-white px-2 py-1 rounded-md shadow-sm inline-flex gap-1;
+    @apply bg-blue-900 text-white px-2 py-1 rounded-md shadow-sm inline-flex gap-1 mr-2;
 }
 .btn-default, .btn-red{
     @apply px-4 py-1 rounded-md;
 }
 .btn-red{
-    @apply bg-red-200 text-red-600 px-4 py-1 rounded-sm shadow-sm;
+    @apply bg-red-700 text-gray-300 px-4 py-1 rounded-md shadow-sm;
 }
 .btn-default{
-    @apply bg-white text-gray-800 px-4 py-1 rounded-sm border border-gray-200 shadow-sm;
+    @apply bg-gray-300 rounded-md px-4 py-1 shadow-sm;
 }
