--- a/admin/styles/globals.css
+++ b/admin/styles/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+
+img{
+    max-height: 100%;
+}
 input, textarea, select{
     @apply border border-gray-200 rounded-sm px-1 w-full py-2;
     @apply mb-2;
